bugfix network shift

--- a/src/app/components/browse/browse.component.less
+++ b/src/app/components/browse/browse.component.less
@@ -6,6 +6,8 @@
     position: relative;
     display: block;
     left: 120px;
+    border: solid 2px #136fe2;
+    border-radius: 10px;
 
     @media (width:1440px) {
       left: 0px;      
@@ -15,9 +17,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      border: solid 2px #136fe2;
       border-radius: 10px;
-     
       background: @network-bg-color;
       //border-width: medium;
         
@@ -192,8 +192,6 @@
   height: 100%;
   position: absolute;
   z-index: 10;
-  top: 2px;
-  left: 2px;
   font-size: x-small;
   
 }
