--- a/src/styles.less
+++ b/src/styles.less
@@ -569,10 +569,7 @@ button.export_nodes {
 
 /* BROWSE START */
 #network-plot-container {
-  .sigma-scene {
-    padding-right: 5px;
-    padding-bottom: 5px;
-  }
+  
 }
 
 /* BROWSE END */
